# buildathon-submission

./: .dockerignore  .gcloudignore  .gitignore  COSTS.md  Cargo.toml  LICENSE  README.md
Resources/: README.md  menu.json
Resources/configs/: duo.json  solo.json  totem.json  tower.json  twins.json  wall.json
Resources/states/: weekday-lunch-rush.json  weekday-morning.json  weekend-evening.json
crates/dmbr-cli/: Cargo.toml
crates/dmbr-cli/src/: main.rs
crates/dmbr-convert/: Cargo.toml
crates/dmbr-convert/src/: adapt.rs  challenge.rs  lib.rs  main.rs
crates/dmbr-core/: Cargo.toml
crates/dmbr-core/src/: error.rs  hash.rs  lib.rs
crates/dmbr-core/src/layout/: balance.rs  capacity.rs  font.rs  mod.rs  paginate.rs  partitioner.rs
crates/dmbr-core/src/models/: day_state.rs  menu.rs  mod.rs  output.rs  screen.rs
crates/dmbr-core/src/pipeline/: filter.rs  meal_period.rs  mod.rs  ordering.rs
crates/dmbr-core/src/renderer/: html.rs  mod.rs
crates/dmbr-core/tests/: integration_test.rs
crates/dmbr-server-actix/: Cargo.toml
crates/dmbr-server-actix/src/: main.rs
crates/dmbr-server-axum/: Cargo.toml
crates/dmbr-server-axum/src/: auth.rs  main.rs
crates/dmbr-web/: Cargo.toml
crates/dmbr-web/src/: admin_pages.rs  db.rs  lib.rs
deploy/: DEPLOY.md  Dockerfile  cloudbuild.yaml  deploy.sh
e2e/: package.json  playwright.config.ts
e2e/tests/: admin.spec.ts  helpers.ts  renderer.spec.ts
migrations/: 0001_menuboard.sql  0002_menu.sql  0003_featured.sql
