[workspace]
resolver = "2"
members = [
    "crates/dmbr-core",
    "crates/dmbr-cli",
    "crates/dmbr-convert",
    "crates/dmbr-web",
    "crates/dmbr-server-axum",
    "crates/dmbr-server-actix",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "BUSL-1.1"

[profile.release]
opt-level = 3
lto = true
