[package]
name = "dmbr-core"
version.workspace = true
edition.workspace = true
description = "Core library for the Digital Menu Board Layout Renderer: schemas, rules pipeline, layout engine, and HTML rendering."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
thiserror = "1"
