[package]
name = "dmbr-server-axum"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dmbr-server-axum"
path = "src/main.rs"

[dependencies]
dmbr-web = { path = "../dmbr-web" }
dmbr-core = { path = "../dmbr-core" }
axum = { version = "0.7", features = ["form"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
