[package]
name = "dmbr-web"
version.workspace = true
edition.workspace = true

[dependencies]
dmbr-core = { path = "../dmbr-core" }
dmbr-convert = { path = "../dmbr-convert" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "dmbr-migrate"
path = "src/bin/migrate.rs"
